--- a/company/日常备份.md
+++ b/company/日常备份.md
@@ -5,3 +5,4 @@
 [180.163.193.130/33066 tianjin/codyy2019tianjin!] 180.163.193.130
 [192.168.188.60/3306 root/root] 192.168.188.60 本地数据库
 [rm-bp19w6cp9rsr832uiho.mysql.rds.aliyuncs.com/3306] 教育数据库
+[erp 地址 cwa1520/123456]http://192.168.188.19/U9/mvc/main/index
